[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/player_selection.gd" type="Script" id=1]
[ext_resource path="res://scenes/player_slot.tscn" type="PackedScene" id=2]

[node name="player_selection" type="Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 112.0
margin/top = 56.0
margin/right = 128.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="player1" parent="." instance=ExtResource( 2 )]

[node name="player2" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 232, 0 )
player_idx = 2

[node name="player3" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 400, 0 )
player_idx = 3

[node name="player4" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 568, 0 )
player_idx = 4

[node name="screen_name" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 320.0
margin/top = 16.0
margin/right = 422.0
margin/bottom = 30.0
text = "Player Selection"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="start" from="player1" to="." method="_on_player_start"]

[connection signal="start" from="player2" to="." method="_on_player_start"]

[connection signal="start" from="player3" to="." method="_on_player_start"]

[connection signal="start" from="player4" to="." method="_on_player_start"]


